tests/macro_attributes/dim/05-incomplete.stderr
error: expected `=`
 --> tests/macro_attributes/dim/05-incomplete.rs:3:1
  |
3 | #[lazy_nd(dim)]
  | ^^^^^^^^^^^^^^^
  |
  = note: this error originates in the attribute macro `lazy_nd` (in Nightly builds, run with -Z macro-backtrace for more info)
